...
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:id="@+id/fragment_plants">

    <TextView
        android:id="@+id/emptyRV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No plants yet! \nTap the + button to add a plant."
...
                />
        </com.github.clans.fab.FloatingActionMenu>
    </RelativeLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <!-- snack bar location -->
        <android.support.design.widget.CoordinatorLayout
...
