<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="8dp"
    card_view:cardUseCompatPadding="true"
    android:foreground="@drawable/ripple_card"
...
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_launcher_round" />


        <ImageButton
            android:id="@+id/popup_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
...
